# rustblog

./: .gitignore  Cargo.toml  README.md  dockerfile
frontend/: admin.html  index.html  loadBlogPosts.js  login.html  package-lock.json  package.json
frontend/styles/: style.css
migrations/2023-08-24-233310_create_users/: up.sql
src/: auth.rs  errors.rs  handlers.rs  main.rs  models.rs  schema.rs
