[package]
name = "rusty_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-identity = "0.6.0"
actix-rt = "2.8.0"
actix-session = { version = "0.8.0", features = ["cookie-session", "redis-rs-tls-session"] }
actix-web = "4.3.1"
actix-web-httpauth = "0.8.0"
alcoholic_jwt = "4091.0.0"
argonautica = "0.2.0"
chrono = {version = "0.4.26", features = ["serde"]}
derive_more = "0.99.17"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
hmac = "0.12.1"
jwt = "0.16.0"
key = "0.0.0"
log = "0.4.20"
pulldown-cmark = "0.9.3"
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.7"
